[package]
name = "ea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.0"
colored = "2.0.0"
